--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@
 
 body {
     background: var(--bg-colour);
+    touch-action: none;
 }
 
 #canvas {
     border: 3px solid var(--bg-canvas);
+    z-index: 30000;
+    touch-action: none;
 }
   
 .container {
