--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 
-.chapters > input[type=checkbox] {
+.selector > input[type=checkbox] {
     height: 20px;
     width: 20px;
     margin: 1.5vh;
