--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     border: 3px solid var(--bg-canvas);
     z-index: 30000;
     touch-action: none;
+    background-color: #21262e;
 }
   
 .container {
